--- a/05-stopwatch/main.css
+++ b/05-stopwatch/main.css
@@ -31,21 +31,89 @@ body {
 	border-radius: 8px;
 	box-shadow: 5px 5px 10px black;
 	color: #fff;
+	overflow: hidden;
 }
 
-.info {
+.info i {
 	position: absolute;
 	top: 6px;
 	right: 14px;
-	padding: 20px;
+	padding: 18px;
 	font-size: 24px;
 	color: var(--second-color);
 	cursor: pointer;
 	transition: color 0.3s;
 }
 
-.info:hover {
+.info .info-btn {
+	right: 14px;
+}
+
+.info .colors-btn {
+	right: 60px;
+}
+
+.info i:hover {
 	color: var(--first-color);
+}
+
+.colors {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	width: 60px;
+	height: 220px;
+	top: 80px;
+	right: -100px;
+	transition: right 0.3s;
+	/* background-color: white; */
+}
+
+.show-colors {
+	right: 2px;
+}
+
+.color {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 40px;
+	height: 40px;
+	background-color: white;
+	border-radius: 50%;
+	border: 2px solid black;
+	cursor: pointer;
+}
+
+.one {
+	background-color: rgb(250, 20, 6);
+	box-shadow: 0 0 14px rgb(250, 20, 6);
+}
+
+.two {
+	background-color: rgb(75, 206, 0);
+	box-shadow: 0 0 14px rgb(75, 206, 0);
+}
+
+.three {
+	background-color: rgb(0, 45, 248);
+	box-shadow: 0 0 14px rgb(0, 45, 248);
+}
+
+.one:hover {
+	background-color: rgba(250, 20, 6, 0.8);
+}
+
+.two:hover {
+	background-color: rgba(75, 206, 0, 0.8);
+}
+
+.three:hover {
+	background-color: rgba(0, 45, 248, 0.8);
 }
 
 h1 {
@@ -150,7 +218,7 @@ button:focus {
 }
 
 .modal .close:hover {
-	background-color: rgb(226, 36, 26);
+	background-color: var(--first-color);
 }
 
 .modal-animation {
